--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -672,7 +672,11 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>Nummer 2</td>
+                     <td>Aantal 2</td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Waardebereik</th>
+                     <td>1 tot 50</td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
@@ -1136,7 +1140,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59788e4180"></a><section id="detail_d59788e4180">
+            </section><a class="anchor" id="detail_d59736e4180"></a><section id="detail_d59736e4180">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1174,7 +1178,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59788e4346"></a><section id="detail_d59788e4346">
+         </section><a class="anchor" id="detail_d59736e4346"></a><section id="detail_d59736e4346">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1211,7 +1215,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59788e4512"></a><section id="detail_d59788e4512">
+         </section><a class="anchor" id="detail_d59736e4512"></a><section id="detail_d59736e4512">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1249,7 +1253,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59788e4678"></a><section id="detail_d59788e4678">
+         </section><a class="anchor" id="detail_d59736e4678"></a><section id="detail_d59736e4678">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1286,7 +1290,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59788e4844"></a><section id="detail_d59788e4844">
+         </section><a class="anchor" id="detail_d59736e4844"></a><section id="detail_d59736e4844">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2159,7 +2163,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59788e7794"></a><section id="detail_d59788e7794">
+            </section><a class="anchor" id="detail_d59736e7794"></a><section id="detail_d59736e7794">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
