--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.66.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220614-151515</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220614-152000</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -696,7 +696,11 @@
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
-                              <td>Nummer 2</td>
+                              <td>Aantal 2</td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Waardebereik</th>
+                              <td>1 tot 50</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -1160,7 +1164,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59788e4180"></a><section id="detail_d59788e4180">
+                     </section><a class="anchor" id="detail_d59736e4180"></a><section id="detail_d59736e4180">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1198,7 +1202,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59788e4346"></a><section id="detail_d59788e4346">
+                  </section><a class="anchor" id="detail_d59736e4346"></a><section id="detail_d59736e4346">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1235,7 +1239,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59788e4512"></a><section id="detail_d59788e4512">
+                  </section><a class="anchor" id="detail_d59736e4512"></a><section id="detail_d59736e4512">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1273,7 +1277,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59788e4678"></a><section id="detail_d59788e4678">
+                  </section><a class="anchor" id="detail_d59736e4678"></a><section id="detail_d59736e4678">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1310,7 +1314,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59788e4844"></a><section id="detail_d59788e4844">
+                  </section><a class="anchor" id="detail_d59736e4844"></a><section id="detail_d59736e4844">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2183,7 +2187,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59788e7794"></a><section id="detail_d59788e7794">
+                     </section><a class="anchor" id="detail_d59736e7794"></a><section id="detail_d59736e7794">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
