--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -4677,7 +4677,7 @@
                   </tr>
                   <tr>
                      <th>Juridische status</th>
-                     <td>Niet-authentiek</td>
+                     <td>Authentiek</td>
                   </tr>
                   <tr>
                      <th>Kardinaliteit</th>
@@ -4695,7 +4695,7 @@
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
-                     <td>Nee</td>
+                     <td>Ja</td>
                   </tr>
                   <tr>
                      <th>Toelichting</th>
