--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.66.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220614-154848</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220614-155545</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -4701,7 +4701,7 @@
                            </tr>
                            <tr>
                               <th>Juridische status</th>
-                              <td>Niet-authentiek</td>
+                              <td>Authentiek</td>
                            </tr>
                            <tr>
                               <th>Kardinaliteit</th>
@@ -4719,7 +4719,7 @@
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
-                              <td>Nee</td>
+                              <td>Ja</td>
                            </tr>
                            <tr>
                               <th>Toelichting</th>
