--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: 1.66.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220614-155545</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20220616-153333</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -893,6 +893,14 @@
                                  </td>
                            </tr>
                            <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Code</td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Opbouw</th>
+                              <td>CNNCNNNN</td>
+                           </tr>
+                           <tr>
                               <th>Regels</th>
                               <td>
                                  
@@ -956,6 +964,14 @@
                               <td>
                                  Putcode
                                  </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Type</th>
+                              <td>Code</td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Opbouw</th>
+                              <td>CCCNNCNNNNNN</td>
                            </tr>
                            <tr>
                               <th>Regels</th>
@@ -1165,7 +1181,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59759e4184"></a><section id="detail_d59759e4184">
+                     </section><a class="anchor" id="detail_d59768e4184"></a><section id="detail_d59768e4184">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1203,7 +1219,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59759e4350"></a><section id="detail_d59759e4350">
+                  </section><a class="anchor" id="detail_d59768e4350"></a><section id="detail_d59768e4350">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1240,7 +1256,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59759e4516"></a><section id="detail_d59759e4516">
+                  </section><a class="anchor" id="detail_d59768e4516"></a><section id="detail_d59768e4516">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1278,7 +1294,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59759e4682"></a><section id="detail_d59759e4682">
+                  </section><a class="anchor" id="detail_d59768e4682"></a><section id="detail_d59768e4682">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1315,7 +1331,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d59759e4848"></a><section id="detail_d59759e4848">
+                  </section><a class="anchor" id="detail_d59768e4848"></a><section id="detail_d59768e4848">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2188,7 +2204,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d59759e7798"></a><section id="detail_d59759e7798">
+                     </section><a class="anchor" id="detail_d59768e7798"></a><section id="detail_d59768e7798">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2678,6 +2694,13 @@
                            <tr>
                               <th>&nbsp;&nbsp;Eenheid</th>
                               <td>m (meter)</td>
+                           </tr>
+                           <tr>
+                              <th>Regels</th>
+                              <td>
+                                 
+                                 <p>De waarde van het attribuut is gelijk aan <em>0</em>.</p>
+                                 </td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
