--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -869,6 +869,14 @@
                         </td>
                   </tr>
                   <tr>
+                     <th>&nbsp;&nbsp;Type</th>
+                     <td>Code</td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Opbouw</th>
+                     <td>CNNCNNNN</td>
+                  </tr>
+                  <tr>
                      <th>Regels</th>
                      <td>
                         
@@ -932,6 +940,14 @@
                      <td>
                         Putcode
                         </td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Type</th>
+                     <td>Code</td>
+                  </tr>
+                  <tr>
+                     <th>&nbsp;&nbsp;Opbouw</th>
+                     <td>CCCNNCNNNNNN</td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1141,7 +1157,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59759e4184"></a><section id="detail_d59759e4184">
+            </section><a class="anchor" id="detail_d59768e4184"></a><section id="detail_d59768e4184">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1179,7 +1195,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59759e4350"></a><section id="detail_d59759e4350">
+         </section><a class="anchor" id="detail_d59768e4350"></a><section id="detail_d59768e4350">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1216,7 +1232,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59759e4516"></a><section id="detail_d59759e4516">
+         </section><a class="anchor" id="detail_d59768e4516"></a><section id="detail_d59768e4516">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1254,7 +1270,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59759e4682"></a><section id="detail_d59759e4682">
+         </section><a class="anchor" id="detail_d59768e4682"></a><section id="detail_d59768e4682">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1291,7 +1307,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59759e4848"></a><section id="detail_d59759e4848">
+         </section><a class="anchor" id="detail_d59768e4848"></a><section id="detail_d59768e4848">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2164,7 +2180,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59759e7798"></a><section id="detail_d59759e7798">
+            </section><a class="anchor" id="detail_d59768e7798"></a><section id="detail_d59768e7798">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2654,6 +2670,13 @@
                   <tr>
                      <th>&nbsp;&nbsp;Eenheid</th>
                      <td>m (meter)</td>
+                  </tr>
+                  <tr>
+                     <th>Regels</th>
+                     <td>
+                        
+                        <p>De waarde van het attribuut is gelijk aan <em>0</em>.</p>
+                        </td>
                   </tr>
                   <tr>
                      <th>Materiële geschiedenis</th>
