--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -32,7 +32,7 @@
                      die gebruikt worden of gaan worden in grondwatermonitoringnetten die door of in opdracht
                      van een bestuursorgaan zijn ingesteld en die voldoen aan de criteria die in het besluit
                      basisregistratie ondergrond zijn vastgelegd, alsook de putten die in soortgelijke
-                     historische netten zijn gebruikt.</p>
+                     historische netten zijn gebruikt. Ieder object heeft ter identificatie een eigen BRO-ID.</p>
                   </td>
             </tr>
          </tbody>
@@ -223,7 +223,9 @@
                   </tr>
                   <tr>
                      <th>&nbsp;&nbsp;Naam</th>
-                     <td>Organisatie</td>
+                     <td>
+                        KvK-nummer
+                        </td>
                   </tr>
                   <tr>
                      <th>Regels</th>
@@ -1157,7 +1159,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59768e4184"></a><section id="detail_d59768e4184">
+            </section><a class="anchor" id="detail_d59841e4184"></a><section id="detail_d59841e4184">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1195,7 +1197,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59768e4350"></a><section id="detail_d59768e4350">
+         </section><a class="anchor" id="detail_d59841e4350"></a><section id="detail_d59841e4350">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1232,7 +1234,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59768e4516"></a><section id="detail_d59768e4516">
+         </section><a class="anchor" id="detail_d59841e4516"></a><section id="detail_d59841e4516">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1270,7 +1272,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59768e4682"></a><section id="detail_d59768e4682">
+         </section><a class="anchor" id="detail_d59841e4682"></a><section id="detail_d59841e4682">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1307,7 +1309,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d59768e4848"></a><section id="detail_d59768e4848">
+         </section><a class="anchor" id="detail_d59841e4848"></a><section id="detail_d59841e4848">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2180,7 +2182,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d59768e7798"></a><section id="detail_d59768e7798">
+            </section><a class="anchor" id="detail_d59841e7798"></a><section id="detail_d59841e7798">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2956,7 +2958,7 @@
                      <th>Definitie</th>
                      <td>
                         
-                        <p>Het referentiestelsel van de gestandaardiseerde coördinaten. </p>
+                        <p>Het referentiestelsel van de gestandaardiseerde coördinaten.</p>
                         </td>
                   </tr>
                   <tr>
@@ -2984,6 +2986,13 @@
                   <tr>
                      <th>Materiële geschiedenis</th>
                      <td>Nee</td>
+                  </tr>
+                  <tr>
+                     <th>Toelichting</th>
+                     <td>
+                        
+                        <p>Het standaard referentiestelsel is ETRS89 (European Terrestrial Reference System 1989).</p>
+                        </td>
                   </tr>
                </tbody>
             </table>
