--- a/index.html
+++ b/index.html
@@ -2,46 +2,61 @@
 <html lang="nl">
 
 <head>
-  <meta content="text/html; charset=utf-8" http-equiv="content-type">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/media/logos/Geonovum.ico' />
-  <link rel="stylesheet" type="text/css" href="localstyle.css" />
-  <title>BRO Gegevenscatalogus Grondwatermonitoringput</title>
-  <script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js' async></script>
-  <script class="remove" src="config.js"></script>
-</head>
+  	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  	<link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico' />
+  	<link rel="stylesheet" type="text/css" href='https://docs.geostandaarden.nl/bro/gen/localstyle.css'/>
+  	<title>BRO Gegevenscatalogus Grondwatermonitoringput</title>
+	<script class='remove' src='https://tools.geostandaarden.nl/respec/builds/respec-geonovum.js' async></script>
+  	<script class="remove" src="config.js"></script>
+</head>	
 
 <body>
-  <section id='abstract'>
-    <p>Samenvatting van informatiemodel.</p>
-  </section>
-  <section id='sotd'>
-    <p>Deze online catalogus bevat uitsluitend de algemene hoofdstukken die voor elk registratieobject gelden. Een issue voor de beheerfase is het updaten van deze online catalogus. De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>.</p>
-  </section>
-  <section id='inleiding'>
-    <h2>Inleiding</h2>
-    <section id='doel-en-doelgroep' class='generic' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'>
-    </section>
-    <section id='totstandkoming' class='generic' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'>
-    </section>
-    <section id='beheer' class='generic' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'>
-    </section>
 
-    <section id="leeswijzer">
-    <h3>Leeswijzer</h3>
-	    <p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
-	    <p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
-	    <p><a href ="#grondwatermonitoringput">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de <a href="#cat">gegevensdefinitie</a>.</p>
-	    <p><a href ="#intro-gegevensdefinitie">Hoofdstuk 4</a> vertelt hoe de catalogus is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
-    </section>
-  </section>
-  <section id='algemene-kenmerken-en-begrippen' data-include='https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html'
-    class='generic'></section>
-  <section id='grondwatermonitoringput'>
-    <h2>Grondwatermonitoringput</h2>
-    <p>De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
-  </section>
+	<!--samenvatting-->
+	<section id='abstract'>
+		<p>Dit document beschrijft de definitie van de grondwatermonitoringput, met een algemene toelichting. </p>
+	</section>
 
+	<!-- status document -->	
+	<section id='sotd'>
+		<p>Deze online catalogus bevat uitsluitend de algemene hoofdstukken die voor elk registratieobject gelden. Een issue voor de beheerfase is het updaten van deze online catalogus. De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>.</p>
+	</section>
+
+	<!-- inleiding -->
+	<section id='inleiding' class='generic informative'>
+		<h2>Inleiding</h2>
+			<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
+			<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
+			<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
+			<section id="leeswijzer">
+				<h3>Leeswijzer</h3>
+					<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
+					<p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
+					<p><a href ="#Grondwatermonitoringput algemene inleiding">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de gegevensdefinitie.</p>
+					<p><a href ="#Grondwatermonitoringput">Hoofdstuk 4</a> is de toelichting op de gegevensdefinitie van het registratieobject die in de ministeriële regeling is opgenomen.</p>		
+					<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 5</a> vertelt hoe de gegevensdefinitie is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
+					<p><a href ="#gegevensdefinitie">Hoofdstuk 6</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
+					<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 7</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin uitbreidbare waardelijsten staan waarnaar in hoofdstuk 6 verwezen wordt. </p>
+			</section>
+	</section>
+ 
+	<!-- Algemene kenmerken en bergippen -->
+	<!-- hoofdstuk 2 -->
+	<section id='algemene-kenmerken-en-begrippen' data-include='https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' class='generic informative'></section>
+	
+	<!-- hoofdstuk 3 -->		
+	<section id="Grondwatermonitoringput algemene inleiding" class='generic informative'>  
+	    <h2>Grondwatermonitoringput algemene inleiding</h2>
+	    <p>Te bezien of dit hoofdstuk voor GMW relevant is!</p>
+	</section>
+
+	<!-- hoofdstuk 3 -->
+	  <section id='Grondwatermonitoringput'>
+	    <h2>Grondwatermonitoringput</h2>
+	    <p>De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
+	  </section>
+	
 	<!-- introductie gegevensdefinitie generiek -->
 	<!-- hoofdstuk 5 -->
 	<section id="intro-gegevensdefinitie" class='generic informative'>
