--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 		<p>Dit document beschrijft de definitie van de grondwatermonitoringput, met een algemene toelichting. </p>
 	</section>
 
-	<!-- status document -->	
-	<section id='sotd'>
-		<p>Deze online catalogus bevat uitsluitend de algemene hoofdstukken die voor elk registratieobject gelden. Een issue voor de beheerfase is het updaten van deze online catalogus. De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>.</p>
-	</section>
+	<!-- status document -->
+	<section id='sotd'></section>
 
 	<!-- inleiding -->
 	<section id='inleiding' class='generic informative'>
@@ -51,7 +49,7 @@
 	    <p>Te bezien of dit hoofdstuk voor GMW relevant is!</p>
 	</section>
 
-	<!-- hoofdstuk 3 -->
+	<!-- hoofdstuk 4 -->
 	  <section id='Grondwatermonitoringput'>
 	    <h2>Grondwatermonitoringput</h2>
 	    <p>De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
