--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 	</section>
 
 	<!-- hoofdstuk 4 -->
-	  <section id='Grondwatermonitoringput'>
-	    <h2>Grondwatermonitoringput</h2>
-	    <p>De huidige versie van de catalogus is te vinden op de website van de <a href="https://basisregistratieondergrond.nl/publish/library/265/20180627_catalogus_grondwatermonitoringput_1_0.pdf" TARGET="_blank">basisregistratie ondergrond</a>. Een issue voor de beheerfase is het updaten van deze online catalogus.</p>
+	  <section id='Grondwatermonitoringput_toelichting' data-include='https://raw.githubusercontent.com/BROprogramma/GMW/gh-pages/toelichting.html'>
 	  </section>
 	
 	<!-- introductie gegevensdefinitie generiek -->
