--- a/toelichting.html
+++ b/toelichting.html
@@ -1,6 +1,6 @@
 <section id="Inleiding">
-	<h3)Inleiding</h3>
-	<p>De catalogus voor de grondwatermonitoringsput beschrijft de gegevens die in de registratie ondergrond zijn opgenomen van putten die in het publieke domein worden gebruikt voor het monitoren van de hoeveelheid grondwater en de kwaliteit ervan.</p>
+	<h3>Inleiding</h3>
+	<p>De catalogus voor de grondwatermonitoringput beschrijft de gegevens die in de registratie ondergrond zijn opgenomen van putten die in het publieke domein worden gebruikt voor het monitoren van de hoeveelheid grondwater en de kwaliteit ervan.</p>
 	
 	<section id="Grondwatermonitoringput">
 		<h4>Grondwatermonitoringput</h4>
@@ -78,3 +78,7 @@
 	 
 	Figuur 8: Het maaiveld in het gebied daalt en de positie van de put t.o.v. NAP daalt mee.
 
+	<section id="INSPIRE">
+		<h3>INSPIRE</h3>
+		<p>Het doel van de Europese kaderrichtlijn INSPIRE is het harmoniseren en openbaar maken van ruimtelijke gegevens van overheidsorganisaties ten behoeve van het milieubeleid. Het registratieobject booronderzoek valt wat het geotechnisch onderzoek betreft onder het INSPIRE-thema Geology, en om die reden moeten de gegevens in het registratieobject geschikt gemaakt worden voor uitwisseling volgens de INSPIRE-standaard. Dit wordt geïmplementeerd middels een mapping van het gegevensmodel van het Geotechnisch booronderzoek op het gegevensmodel van het INSPIRE-thema. De inhoud van deze mapping is geen onderdeel van deze catalogus.</p>
+	</section>
