--- a/toelichting.html
+++ b/toelichting.html
@@ -1,3 +1,5 @@
+<h2>Grondwatermonitoringput</h2>
+
 <section id="Inleiding">
 	<h3>Inleiding</h3>
 	<p>De catalogus voor de grondwatermonitoringput beschrijft de gegevens die in de registratie ondergrond zijn opgenomen van putten die in het publieke domein worden gebruikt voor het monitoren van de hoeveelheid grondwater en de kwaliteit ervan.</p>
